[fix] scrollbar gallery cards

--- a/src/views/Us/Us.css
+++ b/src/views/Us/Us.css
@@ -16,7 +16,7 @@
   margin-top: 70px;
 }
 
-::-webkit-scrollbar {
+.gallery-cards::-webkit-scrollbar {
   display: none;
 }
 
